Added menu items for testing queries

--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="stopped">Stopped</string>
     <string name="service_on">Service ON</string>
     <string name="service_off">Service OFF</string>
+    <string name="TestQuery">TestQuery</string>
 </resources>
